# AdventOfCode2021

./: .editorconfig  CMakeLists.txt  LICENSE  docker-compose.yaml
docker/python/: Dockerfile
src/Day01/: solver.py  tests.py
src/Day02/: solver.py  tests.py
src/Day03/: solver.py  tests.py
src/Day04/: Bingo.cpp  Bingo.h  BingoField.cpp  BingoField.h  BingoNumber.cpp  BingoNumber.h  ParsedInput.cpp  ParsedInput.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  main.cpp
